The new Ashikhmen Shirley shader; firefly explosion with very small lamps regardless of power. #40962

Closed
opened 2014-07-05 23:46:14 +02:00 by Adam Friesen · 7 comments

System Information
Win7 64 bit, Ivy Bridge i7 CPU, ATI 7xxx GPU, 16 gigs of RAM

Blender Version
Broken: b5982f7
Worked: Probably none.

Short description of error
The new Ashikhmen Shirley shader errors out and produces a massive number of bright fireflies when a small-sized lamp (such as a Sunlamp with size 0.01), is shown onto it. This occurs when it is selected for the normal glossy shader as well, but disappears when you increase the size of the lamp. I added a diffuse cube as a brightness reference to show that it is not due to the lamp's brightness that is causing it.

Exact steps for others to reproduce the error
Open the attached .blend in a post 2.71 build and switch to the rendered view, now set the sunlamp size to something much larger and watch the problem disappear.
Cycles_fireflies.blend

System Information Win7 64 bit, Ivy Bridge i7 CPU, ATI 7xxx GPU, 16 gigs of RAM Blender Version Broken: b5982f7 Worked: Probably none. **Short description of error** The new Ashikhmen Shirley shader errors out and produces a massive number of bright fireflies when a small-sized lamp (such as a Sunlamp with size 0.01), is shown onto it. This occurs when it is selected for the normal glossy shader as well, but disappears when you increase the size of the lamp. I added a diffuse cube as a brightness reference to show that it is not due to the lamp's brightness that is causing it. **Exact steps for others to reproduce the error** Open the attached .blend in a post 2.71 build and switch to the rendered view, now set the sunlamp size to something much larger and watch the problem disappear. [Cycles_fireflies.blend](https://archive.blender.org/developer/F96805/Cycles_fireflies.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon
Author

I forgot to add, this issue is limited to the Ashikhmen behavior only, Beckmann and GGX are unaffected when used in both shader node types.

I forgot to add, this issue is limited to the Ashikhmen behavior only, Beckmann and GGX are unaffected when used in both shader node types.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Sergey Sharybin self-assigned this 2014-08-19 14:16:39 +02:00

This issue was referenced by 7bc87a372e

This issue was referenced by 7bc87a372e40b6adc852d42c60ea6aca55aaa7fb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7bc87a372e.

Closed by commit 7bc87a372e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40962
No description provided.