Fix T40962: Ashikhmen Shirley shader fireflies